--- a/chalenge.css
+++ b/chalenge.css
@@ -2,16 +2,30 @@
 *{
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 body {
   font-family: sans-serif;
   line-height: 1.4;
   
 }
+.product-image{
+
+float: left;
+margin-right: 40px;
+}
+
 .container{
-  width: 700px;
-  margin-left: auto;
-  margin-right: auto;
+  
+  
+  
+  
+}
+.product-info{
+width: 243px;
+float: left;
+margin-right: 40px;
+margin-top: 20px;
 }
 /* PRODUCT */
 .product {
@@ -19,6 +33,9 @@ body {
   width: 825px;
   margin:50px auto;
   position: relative;
+  display: grid;
+  grid-template-columns: 250px 1fr 1fr;
+  column-gap: 40px;
 }
 
 
@@ -28,12 +45,22 @@ body {
   text-transform: uppercase;
   background-color: #f7f7f7;
   padding: 15px;
+  grid-column: 1 / -1;
   
 }
 
 /* PRODUCT INFORMATION */
 .price {
-  font-size: 24px;
+  font-size: 22px;
+  
+  
+  
+  
+}
+.product-price{
+  display: flex;
+  justify-content: space-between;
+  align-items: centre;
 }
 
 .shipping {
@@ -42,6 +69,9 @@ body {
   font-weight: bold;
   color: #777;
   margin-bottom: 20px;
+
+  
+  
 }
 
 .sale{
@@ -59,7 +89,10 @@ body {
 }
   
   
-  
+  .product-description{
+    clear: both;
+    margin-bottom: 10px;
+  }
   
 
 .more-info:link, .more-info:visited {
@@ -71,39 +104,54 @@ body {
 .more-info:hover, .more-info:active {
   text-decoration: none;
 }
-
+.product-colors{
+display: flex;
+gap: 10px;
+}
 .color{
   background-color: #000;
-  height: 20px;
-  width: 20px;
-  display: inline-block;
-  margin-right: 10px;
+  height: 22px;
+  width: 22px;
+  
+  
+  
+  
 }
 .color-blue{
   background-color: #2f6ee2;
   
+  
 }
 .color-red{
   background-color: #2f6ee2;
+  
 }
 .color-yellow{
   background-color: #febf1e;
+  
 }
 .color-green{
   background-color: #30cc20;
+  
 }
 .color-brown{
   background-color: #885214;
+  
 }
 
   
 
 /* PRODUCT DETAILS */
+.product-details{
+
+flex: 1;
+margin-top: 20px;
+}
 .details-title {
   text-transform: uppercase;
   font-size: 16px;
   margin-bottom: 15px;
-  margin-top: 30px;
+  
 }
 
 .details-list {
@@ -123,6 +171,8 @@ body {
   cursor: pointer;
   padding: 15px;
   width: 100%;
+  border-top: 4px solid black;
+  grid-column: 1 / -1;
 }
 
 .add-cart:hover {
