--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
 margin: 0px;
 padding: 0px;
+box-sizing: border-box;
 }
 
 
@@ -37,6 +38,7 @@ font-size: 20;
 font-family: sans-serif;
 text-transform: uppercase;
 text-align: center;
+margin-bottom: 30px;
 }
 p{
   font-size: 22px;
@@ -71,20 +73,23 @@ li{
 }
 .related{
   list-style: none;
+  margin-left: 0;
 }
 
 .container{
-  width: 700px;
+  width: 1200px;
   margin-left: auto;
   margin-right: auto;
 }
+
+
 .main-header{
   background-color: #f7f7f7;
  /* padding: 20px;
   padding-left: 40px;
   padding-right: 40px;*/
   padding: 20px 40px;
-  margin-bottom: 60px;
+ /* margin-bottom: 60px;*/
   
 }
 
@@ -100,8 +105,9 @@ aside{
   background-color: #f7f7f7;
   border-top: 5px solid #1098ad;
   border-bottom: 5px solid #1098ad;
-  padding: 50px 0;
-  width: 500px;
+  padding: 50px 40px;
+  box-sizing: border-box;
+  
   
   
 
@@ -167,4 +173,112 @@ padding: 5px 10px;
 position: absolute;
 top: -10px;
 right: -25px;
+}
+/*Floats*/
+/*
+.author-img{
+  float: left;
+  margin-bottom: 20px;
+  
+}
+.author{
+  float: left;
+  margin-top: 10px;
+  margin-left: 20px;
+}
+h1{
+  float: left;
+}
+nav{
+  float: right;
+}
+.clearfix::after{
+clear: both;
+content: "";
+display: block;
+}
+article{
+  
+  width: 825px;
+  float: left;
+}
+
+aside{
+  
+  width: 300px;
+  float: right;
+}
+
+footer{
+  
+  clear: both;
+}
+*/
+.main-header{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.author-box{
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+  
+}
+.author{
+  margin-bottom: 0;
+  margin-left: 15px;
+}
+.related-post{
+  display: flex;
+  align-items: center;
+  gap: 20px;
+
+}
+.related-link:link{
+  font-size: 17px;
+  font-weight: bold;
+  font-style: normal;
+}
+
+
+.related-author{
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: normal;
+  font-style: italic;
+}
+/*flexbox layout
+.row{
+  display: flex;
+  gap: 75px;
+  margin-bottom: 60px;
+  align-items: flex-start;
+}
+article{
+  flex: 1;
+  margin: 0;
+}
+aside{
+  flex: 0 0 300px;*/
+  
+
+/*css Grid layout*/
+.container{
+display: grid;
+grid-template-columns:  1fr 300px;
+column-gap: 75px;
+align-items: start;
+}
+.main-header{
+  grid-column: 1 /-1;
+}
+article{
+
+}
+aside{
+
+}
+footer{
+grid-column: 1 / -1;
 }
